add minor things

--- a/popup.html
+++ b/popup.html
@@ -2,9 +2,11 @@
 <html>
     <head>
         <title>Water Level Eye</title>
+
     </head>
     <body>
-        <h1>Current Water Level</h1>
-        <p>191</p>
+        <h2>Current Water Level</h2>
+        <div id="currentOutflow"></div>
     </body>
+    <script src="popup.js"></script>
 </html>
