--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Water Level Eye</title>
-
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h2>Current Water Level</h2>
