--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Water Level Eye</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="resources/css/styles.css">
     </head>
         <h2 id="title">Station</h2>
         <p>Aktueller Wasserstand [m.&#252;.M.]: <span id="currentLevel"></span></p>
@@ -11,5 +11,5 @@
         <p>Detailierter Bericht: <a id="detailUrl" target="_blank">Link</a></p>
         <p id="changeOptions"><a id="optionsUrl" target="_blank">Station wechseln</a></p>
     </body>
-    <script src="popup.js"></script>
+    <script src="js/popup.js"></script>
 </html>
