--- a/options.html
+++ b/options.html
@@ -364,6 +364,6 @@
         <div id="status"></div>
         <button id="save">Save</button>
 
-        <script src="options.js"></script>
+        <script src="js/options.js"></script>
     </body>
 </html>
