--- a/options.html
+++ b/options.html
@@ -369,6 +369,11 @@
             <input id="discharge-limit">
         </div>
 
+        <div>
+            <label for="notification-enabled" class="control-label">Chrome-Benachrichtigung, wenn Durchfluss &#252;ber Limit ist: </label>
+            <input id="notification-enabled" type="checkbox">
+        </div>
+
         <div id="status"></div>
         <button id="save">Save</button>
 
