add central service.js to avoid duplicated code

--- a/options.html
+++ b/options.html
@@ -392,6 +392,6 @@
             </table>
         </div>
 
-        <script src="js/options.js"></script>
+        <script src="js/options.js" type="module"></script>
     </body>
 </html>
