--- a/popup.html
+++ b/popup.html
@@ -11,5 +11,5 @@
         <p>Detailierter Bericht: <a id="detailUrl" target="_blank">Link</a></p>
         <p id="changeOptions"><a id="optionsUrl" target="_blank">Station wechseln</a></p>
     </body>
-    <script src="js/popup.js"></script>
+    <script type="module" src="js/popup.js"></script>
 </html>
