--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,10 @@
         <p>Aktuelle Temperatur [&#176;C]: <span id="currentTemperature"></span></p>
         <p>Detailierter Bericht: <a id="detailUrl" target="_blank">Link</a></p>
         <p id="changeOptions"><a id="optionsUrl" target="_blank">Station wechseln</a></p>
+        <p></p>
+        <p id="map">
+            todo
+        </p>
     </body>
     <script type="module" src="js/popup.js"></script>
 </html>
